added gallery - finished

--- a/index.html
+++ b/index.html
@@ -84,13 +84,25 @@
   <div class="about">
     <h2>About My Websites</h2>
 
-    <p>This year for Web and Mobile Media production we have coded and created websites using HTML, CSS, and Javascript from scratch. Here are a couple of websites that I have made using the program Atom along with Github. While I have dabbled in HTML writing and CSS, Javascript was new to me and so I have added it into this website so test my skills.</p>
+    <p>This year for Web and Mobile Media production we have coded and created websites using HTML, CSS, and Javascript from scratch. Here are a couple of websites that I have made using the program Atom along with Github. While I have dabbled in HTML writing and CSS, Javascript was new to me and so I have added it into this website to test my skills.</p>
+
+    <div class="software">
+
+      <img src="images/github.png" width="60%" alt="GitHub and Atom">
+
+    </div>
 
   </div>
 
   <div class="portfolio">
 
     <h2>Portfolio</h2>
+
+    <img src="images/banner2.png" style="width:30%">
+    <img src="images/banner.png" style="width:30%">
+    <img src="images/banner3.png" style="width:30.7%">
+    <img src="images/pets.png" style="width:30%">
+    <img src="images/colours.png" style="width:30%">
 
   </div>
 
